--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -12,7 +12,7 @@
 }
 \urlstyle{same}
 
-% Set applicant's personal data for header
+% Set personal data for header
 \name{\VAR{contact.name}}
 \address{\VAR{contact.address.line1} \linebreak \VAR{contact.address.city} \VAR{contact.address.state} \VAR{contact.address.zip}}
 \contacts{(347) 604-5831 \linebreak saffathasan@gmail.com}
