style: escape ampersand

--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -26,7 +26,7 @@
 		\begin{cvsubsection}{Philadelphia, PA}{Drexel University}{Graduation: Dec 2020}
 			\begin{itemize}
 				\item B.S./M.S. in Computer Science | GPA: 3.54
-				\item Graduate Coursework: 	Test Driven Dev \& eXtreme Prog; Web Services & Mobile Arch; Data Analysis at Scale.
+				\item Graduate Coursework: 	Test Driven Dev \& eXtreme Prog; Web Services \& Mobile Arch; Data Analysis at Scale.
 				\item Undergraduate Coursework: Software Architecture; Software Engineering; Software Evolution.
 			\end{itemize}
 		\end{cvsubsection}
