--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -23,7 +23,7 @@
 	\makeheader
 	
 	\begin{cvsection}{Education}
-		\begin{cvsubsection}{Philadelphia, PA}{Drexel University}{Graduation: Dec 2020}
+		\begin{cvsubsection}{\VAR{education.location}}{\VAR{education.name}}{Graduation: \VAR{education.graduation}}
 			\begin{itemize}
 				\item B.S./M.S. in Computer Science | GPA: 3.54
 				\item Graduate Coursework: 	Test Driven Dev \& eXtreme Prog; Web Services \& Mobile Arch; Data Analysis at Scale.
