--- a/templates/resume-simple.tex
+++ b/templates/resume-simple.tex
@@ -27,6 +27,7 @@
 % \usepackage[sfdefault]{roboto}
 % \usepackage[sfdefault]{noto-sans}
 % \usepackage[default]{sourcesanspro}
+\usepackage{mathptmx}
 
 % serif
 % \usepackage{CormorantGaramond}
@@ -135,8 +136,8 @@
 
     %% for job in experience
     \resumeSubheading
-      {\VAR{job.title}}{\VAR{job.duration}}
-      {\VAR{job.employer}}{\VAR{job.location}}
+      {\VAR{job.employer} - \VAR{job.title}}{\VAR{job.duration}}
+      {\VAR{job.location}}{}
       \resumeItemListStart
         %% for item in job.summary_items
         \resumeItem{\VAR{item}}
@@ -148,26 +149,18 @@
 
 
 %-----------PROJECTS-----------
-\section{Projects}
+\section{Projects - \VAR{contact.repo}}
     \resumeSubHeadingListStart
+      %% for project in projects
       \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
+          {\textbf{\VAR{project.name}}}{\VAR{project.duration}}
           \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
+            %% for item in project.summary_items
+            \resumeItem{\VAR{item}}
+            %% endfor
           \resumeItemListEnd
-      \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
-          \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
-          \resumeItemListEnd
+      %% endfor
     \resumeSubHeadingListEnd
-
 
 
 %
@@ -175,13 +168,14 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+      \textbf{Proficient}: \VAR{skills.proficient} \\
+      \textbf{Familiar}: \VAR{skills.familiar}
+    %  \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
+    %  \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
+    %  \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
+    %  \textbf{Libraries}{: pandas, NumPy, Matplotlib}
     }}
  \end{itemize}
-
 
 %-------------------------------------------
 \end{document}
