fix: combine two lines (originally one)

--- a/archive/mcdowellcv.cls
+++ b/archive/mcdowellcv.cls
@@ -14,8 +14,7 @@
 
 % Set font face
 % \usepackage{fontspec}
-% \setmainfont[SmallCapsFeatures={Renderer=Basic},
-Ligatures={TeX}]{\mainfontface}
+% \setmainfont[SmallCapsFeatures={Renderer=Basic},Ligatures={TeX}]{\mainfontface}
 % Ligatures={TeX, NoCommon, NoDiscretionary}]{\mainfontface} %% NoCommon and NoDiscretionary not available
 
 % Remove paragraph indentation
