tex: escape ampersands

--- a/archive/main.tex
+++ b/archive/main.tex
@@ -32,7 +32,7 @@
 		\begin{cvsubsection}{Philadelphia, PA}{Drexel University}{Graduation: Dec 2020}
 			\begin{itemize}
 				\item B.S./M.S. in Computer Science | GPA: 3.54
-				\item Graduate Coursework: 	Test Driven Dev \& eXtreme Prog; Web Services & Mobile Arch; Data Analysis at Scale.
+				\item Graduate Coursework: 	Test Driven Dev \& eXtreme Prog; Web Services \& Mobile Arch; Data Analysis at Scale.
 				\item Undergraduate Coursework: Software Architecture; Software Engineering; Software Evolution.
 			\end{itemize}
 		\end{cvsubsection}
@@ -44,7 +44,7 @@
 	            \item Explored cloud architectural patterns to support on-prem and cloud deployments
 	            \item Created proof of concept leveraging Gloo for centralized network traffic configuration
 	            \item Lead intern project using TDD and automated deployment patterns with GitOPS
-	            \item \underline{Leveraged knowledge} in Kubernetes, OpenShift, Gitlab CI, AWS Lambda & EKS, S2I, NodeJS, Angular, Express
+	            \item \underline{Leveraged knowledge} in Kubernetes, OpenShift, Gitlab CI, AWS Lambda \& EKS, S2I, NodeJS, Angular, Express
 	        \end{itemize}
 	    \end{cvsubsection}
 		\begin{cvsubsection}{Lockheed Martin, Moorestown, NJ}{Software Engineer}{Apr - Sept 2019}
