tex: set font to mathptmx as times new roman not available

--- a/archive/mcdowellcv.cls
+++ b/archive/mcdowellcv.cls
@@ -16,6 +16,7 @@
 % \usepackage{fontspec}
 % \setmainfont[SmallCapsFeatures={Renderer=Basic},Ligatures={TeX}]{\mainfontface}
 % Ligatures={TeX, NoCommon, NoDiscretionary}]{\mainfontface} %% NoCommon and NoDiscretionary not available
+\usepackage{mathptmx}
 
 % Remove paragraph indentation
 \usepackage[parfill]{parskip} 
