fix: add missing \end tag

--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -42,6 +42,7 @@
 			\end{itemize}
 	    \end{cvsubsection}
 		%% endfor
+	\end{cvsection}
 	
 	\begin{cvsection}{Software Projects - \url{www.gitlab.com/saffathasan}}
 		%% for project in projects
