ensure pdf is machine readable

--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -12,6 +12,9 @@
 }
 \urlstyle{same}
 
+% Ensure that generate pdf is machine readable/ATS parsable
+\pdfgentounicode=1
+
 % Set personal data for header
 \name{\VAR{contact.name}}
 \address{\VAR{contact.address.line1} \linebreak \VAR{contact.address.city} \VAR{contact.address.state} \VAR{contact.address.zip}}
