feat: split up skills into lists

--- a/templates/resume-simple.tex
+++ b/templates/resume-simple.tex
@@ -168,8 +168,8 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-      \textbf{Proficient}: \VAR{skills.proficient} \\
-      \textbf{Familiar}: \VAR{skills.familiar}
+      \textbf{Proficient}: \VAR{skills.proficient |join(', ')} \\
+      \textbf{Familiar}: \VAR{skills.familiar|join(', ')}
     %  \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
     %  \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
     %  \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
