--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -82,8 +82,8 @@
 	\begin{cvsection}{Technical Skills}
 		\begin{cvsubsection}{}{}{}	
 		    \begin{itemize}
-				\item \textbf{Proficient}: \VAR{skills.proficient}
-				\item \textbf{Familiar}: \VAR{skills.familiar}
+				\item \textbf{Proficient}: \VAR{skills.proficient|join(', ')}
+				\item \textbf{Familiar}: \VAR{skills.familiar|join(', ')}
 			\end{itemize}
 		\end{cvsubsection}
 	\end{cvsection}
