show qcc but hide in one version

--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -26,7 +26,7 @@
 	\makeheader
 	
 	\begin{cvsection}{Education}
-		%% for school in education
+		%% for school in education[:1]
 		\begin{cvsubsection}{\VAR{school.name}}{\VAR{school.location}}{Graduation: \VAR{school.graduation}}
 			\begin{itemize}
 				%% for item in school.summary_items
