--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -28,6 +28,9 @@
 
 	% Print the header
 	\makeheader
+		{\printaddress}
+		{\printname}
+		{\printcontacts}
 	
 	\begin{cvsection}{Education}
 		%% for school in education[:1]
