feat: update header

--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -23,9 +23,9 @@
 
 	% Print the header
 	\makeheader
-		{\VAR{contact.address.line1} \linebreak \VAR{contact.address.city} \VAR{contact.address.state} \VAR{contact.address.zip}}
+		{\ul{\VAR{contact.repo}} \linebreak \ul{\VAR{contact.linkedin}}}
 		{\VAR{contact.name}}
-		{\VAR{contact.phone} \linebreak \VAR{contact.email}}
+		{\VAR{contact.phone} \linebreak \ul{\VAR{contact.email}}}
 	
 	\begin{cvsection}{Education}
 		%% for school in education[:1]
