feat: split github/gitlab

--- a/templates/resume-simple.tex
+++ b/templates/resume-simple.tex
@@ -126,7 +126,8 @@
     \textbf{\Huge \scshape \VAR{contact.name}} \\ \vspace{1pt}
     \small \VAR{contact.phone} $|$ \href{mailto:\VAR{contact.email}}{\ul{\VAR{contact.email}}} $|$
     \href{https://\VAR{contact.linkedin}}{\VAR{contact.linkedin}} $|$
-    \href{https://\VAR{contact.repo}}{\VAR{contact.repo}}
+    \href{https://\VAR{contact.github}}{\VAR{contact.github}} $|$
+    \href{https://\VAR{contact.gitlab}}{\VAR{contact.gitlab}}
 \end{center}
 
 
