data: update bullets and repo links
removed link from Software Projects as we
point to github and gitlab

--- a/templates/resume.tex
+++ b/templates/resume.tex
@@ -57,7 +57,7 @@
 		%% endfor
 	\end{cvsection}
 	
-	\begin{cvsection}{Software Projects - \url{www.gitlab.com/saffathasan}}
+	\begin{cvsection}{Software Projects}
 		%% for project in projects
 		\begin{cvsubsection}
 			{\href{\VAR{project.url}}{\VAR{project.name}}}
