--- a/templates/resume-simple.tex
+++ b/templates/resume-simple.tex
@@ -162,7 +162,7 @@
 
 
 %-----------PROJECTS-----------
-\section{Projects \url{\VAR{contact.repo}}}
+\section{Projects}
     \resumeSubHeadingListStart
       %% for project in projects
       \resumeProjectHeading
